# MathSolver

./: Cargo.toml  LICENSE  README.md
src/: CFG  CFG.txt  backup  main.rs
